--- a/.eslintrc
+++ b/.eslintrc
@@ -1,27 +1,32 @@
 {
-  "plugins": [
-      "react"
-  ],
+  "plugins": ["react"],
+  "parser": "babel-eslint",
   "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-          "jsx": true
-      }
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
-      "es6":     true,
-      "browser": true,
-      "node":    true,
-      "jest":    true
-  },   
+    "es6": true,
+    "browser": true,
+    "node": true,
+    "jest": true
+  },
   "extends": [
-      "eslint:recommended",
-      "google",
-      "plugin:react/recommended"
+    "eslint:recommended",
+    "google",
+    "plugin:react/recommended",
+    "prettier"
   ],
   "rules": {
-      "require-jsdoc": 0
+    "require-jsdoc": 0,
+    "max-len": ["error", { "code": 100 }],
+    "quotes": ["error", "double"],
+    "comma-dangle": 0,
+    "object-curly-spacing": 0,
+    "arrow-parens": 0,
+    "no-invalid-this": 0
   },
   "settings": {
     "react": {
