--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "acorn": "^6.0.5",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.11.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.12.3",
     "jest": "^24.5.0",
     "react-test-renderer": "^16.7.0",
@@ -34,8 +37,12 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "redux": "^4.0.1"
+    "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "styled-components": "^4.2.0"
   }
 }
