--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.4.0",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.12.3",
     "jest": "^24.5.0",
     "react-test-renderer": "^16.7.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
@@ -44,6 +46,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.0",
+    "react-sweet-progress": "^1.1.2",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
   }
