--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint ./",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -33,6 +34,8 @@
     "eslint-config-google": "^0.11.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-react": "^7.12.3",
+    "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.5.0",
     "react-test-renderer": "^16.7.0",
     "style-loader": "^0.23.1",
