--- a/buildspec_invalidate.yml
+++ b/buildspec_invalidate.yml
@@ -2,5 +2,5 @@ version: 0.2
 phases:
   build:
     commands:
-      - aws cloudfront create-invalidation --distribution-id "${DISTRIBUTION_ID_1}"
-      - aws cloudfront create-invalidation --distribution-id "${DISTRIBUTION_ID_2}"
+      - aws cloudfront create-invalidation --distribution-id "${DISTRIBUTION_ID_1}" --paths '/*'
+      - aws cloudfront create-invalidation --distribution-id "${DISTRIBUTION_ID_2}" --paths '/*'
