--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
     "react": "^16.7.0",
