Remove min-age cache control header

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint ./",
     "start": "NODE_ENV=development webpack-dev-server",
     "build": "NODE_ENV=production webpack",
-    "deploy": "aws s3 sync ./dist s3://conju-gator.com --metadata Content-Encoding=gzip --cache-control min-age=86400 --cache-control max-age=31536000 --delete",
+    "deploy": "aws s3 sync ./dist s3://conju-gator.com --metadata Content-Encoding=gzip --cache-control max-age=31536000 --delete",
     "stats": "ANALYZE=true NODE_ENV=production webpack --profile --json > stats.json"
   },
   "jest": {
