--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^5.0.0",
+    "react-select": "^3.0.8",
     "react-sweet-progress": "^1.1.2",
     "redux": "^4.0.1",
     "styled-components": "^4.2.0"
