--- a/package.json
+++ b/package.json
@@ -50,11 +50,14 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.2",
+    "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "prop-types": "^15.7.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-select": "^3.0.8",
     "react-sweet-progress": "^1.1.2",
