--- a/package.json
+++ b/package.json
@@ -1,67 +1,50 @@
 {
-  "name": "conjugator",
-  "version": "1.0.0",
-  "description": "Conjugator",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "lint": "eslint ./",
-    "start": "NODE_ENV=development webpack-dev-server",
-    "build": "NODE_ENV=production webpack",
-    "deploy": "aws s3 sync ./dist s3://conju-gator.com --metadata Content-Encoding=gzip --cache-control max-age=31536000 --delete",
-    "stats": "ANALYZE=true NODE_ENV=production webpack --profile --json > stats.json"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./setupTests.js"
-    ]
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "acorn": "^6.0.5",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "babel-loader": "^8.0.5",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^2.1.1",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.4.0",
-    "eslint-config-google": "^0.11.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-react": "^7.12.3",
-    "file-loader": "^3.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.5.0",
-    "react-test-renderer": "^16.7.0",
-    "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.1.2",
-    "webpack": "^4.28.4",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
-  },
+  "name": "conjugator_front",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.2",
     "@material-ui/core": "^4.9.0",
     "@material-ui/icons": "^4.5.1",
-    "axios": "^0.18.0",
-    "lodash": "^4.17.11",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "react-sweet-progress": "^1.1.2",
-    "redux": "^4.0.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^5.0.0"
+  },
+  "scripts": {
+    "start": "NODE_ENV=development PORT=7700 react-scripts start",
+    "build": "NODE_ENV=production react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-react": "^7.18.0"
   }
 }
