--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,9 +2,19 @@ version: 0.2
 phases:
   install:
     commands:
+      - echo Entered the install phase...
+      - apt-get update -y
+      - apt-get install apt-transport-https
+      # Setup for Yarn
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
+      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
+  pre_build:
+    commands:
+      - echo Entered the pre_build phase...
       - yarn install
   build:
     commands:
+      - echo Entered the build phase...
       - yarn run build
 artifacts:
   files:
