--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^0.19.2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "16.12",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
