--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "16.12",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.0",
     "react-select": "^3.0.8",
     "react-sweet-progress": "^1.1.2",
     "styled-components": "^5.0.0"
@@ -42,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.9.0",
